--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on: push
 
 jobs:
   build:
-    runs-on: Fedora Linux 36 (Workstation Edition)
+    runs-on: Fedora Linux 36
 
     steps:
       - uses: actions/checkout@v2
